--- a/demo/student/Explore.ipynb
+++ b/demo/student/Explore.ipynb
@@ -1,27 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "anaconda-cloud": "",
-    "kernelspec": {
-      "display_name": "R",
-      "langauge": "R",
-      "name": "ir"
-    },
-    "language_info": {
-      "codemirror_mode": "r",
-      "file_extension": ".r",
-      "mimetype": "text/x-r-source",
-      "name": "R",
-      "pygments_lexer": "r",
-      "version": "3.4.1"
-    },
-    "colab": {
-      "name": "Explore.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -56,16 +33,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "MX_AV5eM8uL3"
       },
+      "outputs": [],
       "source": [
         "# Load the Tidyverse\n",
         "library(tidyverse)\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -79,18 +56,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "XEXdCDFU8uL-"
       },
+      "outputs": [],
       "source": [
         "# Load the library containing the data set\n",
         "penguins <- read_csv(\"penguins.csv\")\n",
         "\n",
         "# Print the first few rows of the data\n",
         "head(penguins)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -98,22 +75,22 @@
         "id": "cgmublZu8uL_"
       },
       "source": [
-        "Sometimes, when we have a lot of columns in our data, it may difficult to get a grip of the data at first sight using `slice_head`\n",
+        "Sometimes, when we have a lot of columns in our data, it may difficult to get a grip of the data at first sight using `head()`\n",
         "\n",
         "`glimpse` produces a transposed version where columns run down the page, and data runs across. This makes it possible to see every column in a data frame. Into the bargain, it also shows the dimension of the data frame.\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "t2WfrgSv8uMA"
       },
+      "outputs": [],
       "source": [
         "penguins %>% \n",
         "  glimpse()\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -127,16 +104,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "qUwa5BaS8uMD"
       },
+      "outputs": [],
       "source": [
         "# Do we have any missing values?\n",
         "penguins %>% \n",
         "  anyNA()\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -150,15 +127,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "toAE6txD8uMF"
       },
+      "outputs": [],
       "source": [
         "penguins %>% \n",
         "  head()\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -172,16 +149,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Wh4BNUOW8uMH"
       },
+      "outputs": [],
       "source": [
         "# What are the different species of penguins in our data?\n",
         "penguins %>% \n",
         "  distinct(species)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -195,16 +172,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "tKIN318z8uMI"
       },
+      "outputs": [],
       "source": [
         "# What are the different islands in our data?\n",
         "penguins %>% \n",
         "  distinct(island)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -230,15 +207,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "giP8aeYg8uMJ"
       },
+      "outputs": [],
       "source": [
         "penguins %>% \n",
         "  filter(species == \"Adelie\")\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,9 +229,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "Uv_nB3598uMK"
       },
+      "outputs": [],
       "source": [
         "# Subset data to only obtain Adelie penguins\n",
         "adelie_penguins <- penguins %>% \n",
@@ -263,9 +242,7 @@
         "# Print the first few rows of data\n",
         "adelie_penguins %>% \n",
         "  head()\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -280,18 +257,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "v6C-Sodi8uML"
       },
+      "outputs": [],
       "source": [
         "chinstrap_penguins <- penguins %>% \n",
         "  ____(species == \"____\")\n",
         "\n",
         "chinstrap_penguins %>% \n",
         "  head()\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -304,15 +281,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "g4hXJa5m8uMM"
       },
+      "outputs": [],
       "source": [
         ". = ottr::check(\"tests/Question 1.R\")\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -329,16 +306,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "f4INDRql8uMN"
       },
+      "outputs": [],
       "source": [
         "# Make a subset only containing Chinstrap and Gentoo penguins\n",
         "penguins %>% \n",
         "  filter(species == \"Chinstrap\" | species == \"Gentoo\")\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -359,16 +336,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "XF4Iiseh8uMO"
       },
+      "outputs": [],
       "source": [
         "penguins %>%\n",
         "  filter(species == \"Gentoo\", island == \"Dream\") %>% \n",
         "  head()\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -383,9 +360,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "7lA-Xf5-8uMO"
       },
+      "outputs": [],
       "source": [
         "penguins_subset <- penguins %>%\n",
         "  ____(____ == \"female\",\n",
@@ -394,9 +373,7 @@
         "\n",
         "penguins_subset %>% \n",
         "  head()\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -409,15 +386,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "o9Ii701t8uMP"
       },
+      "outputs": [],
       "source": [
         ". = ottr::check(\"tests/Question 2.R\")\n",
         "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -466,5 +443,28 @@
         "<img src = \"../../images/r_learners_sm.jpeg\", width= 500>\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "anaconda-cloud": "",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "Explore.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "R",
+      "langauge": "R",
+      "name": "ir"
+    },
+    "language_info": {
+      "codemirror_mode": "r",
+      "file_extension": ".r",
+      "mimetype": "text/x-r-source",
+      "name": "R",
+      "pygments_lexer": "r",
+      "version": "3.4.1"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
