--- a/demo/instructor/Explore.Rmd
+++ b/demo/instructor/Explore.Rmd
@@ -165,7 +165,7 @@ suppressPackageStartupMessages({
 
 ## Test ##
 test_that('the subset only has Chinstrap penguins', {
-  expect_output(print(unique(chinstrap_penguins$species)), "[1] Chinstrap", fixed = TRUE)
+  expect_output(print(unique(chinstrap_penguins$species)), "Chinstrap")
   
 })
   
@@ -217,7 +217,7 @@ Give it a try yourself.
 penguins_subset <- penguins %>%
   filter(sex == "female",
          species == "Adelie") %>%
-  filter(island %in% c("Dream","Torgersen"))
+  filter(island == "Dream" | island == "Torgersen")
 
 penguins_subset %>% 
   head()
@@ -235,7 +235,7 @@ failure_message: Oops! Let's give it another try. Ensure you have filtered the p
 " # END TEST CONFIG
 
 test_that('the subset only has Adelie penguins', {
-  expect_output(print(unique(penguins_subset$species)), "[1] Adelie", fixed = TRUE)
+  expect_output(print(unique(penguins_subset$species)), "Adelie", fixed = TRUE)
   
 })
   
@@ -250,7 +250,7 @@ failure_message: Oops! Let's give it another try. Perhaps we included some male 
 
 
 test_that('the subset only has female penguins', {
-  expect_output(print(unique(penguins_subset$sex)), "[1] female", fixed = TRUE)
+  expect_output(print(unique(penguins_subset$sex)), "female", fixed = TRUE)
   
 })
 ```
@@ -264,7 +264,7 @@ failure_message: Almost there. Let's give it another try. Perhaps we included so
 " # END TEST CONFIG
 
 test_that('the subset only has penguins from Torgersen and Dream islands', {
-  expect_output(print(unique(penguins_subset$island)), "[1] Torgersen Dream", fixed = TRUE)
+  expect_output(glimpse(penguins_subset), "Rows: 51\nColumns: 8", fixed = TRUE)
   
 })
 
