--- a/demo/student/Explore_2.ipynb
+++ b/demo/student/Explore_2.ipynb
@@ -309,9 +309,8 @@
       "outputs": [],
       "source": [
         "penguins_subset <- penguins %>%\n",
-        "  ____(____ == \"female\",\n",
-        "         species ____) %>%\n",
-        "  ____(____ | ____)\n",
+        "  filter(___) %>%\n",
+        "  filter(___)\n",
         "\n",
         "penguins_subset %>% \n",
         "  head()\n"
